# pirate-app-tauri

./: package-lock.json  package.json
resources/: shows.json
src-tauri/: Cargo.toml  shows.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/routes/: +page.svelte
